Add some things

--- a/funoon_fiesta/index.html
+++ b/funoon_fiesta/index.html
@@ -7,8 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Funoon Fiesta</title>
   </head>
-  <body>
+  <body class="bg-[#f5f0ec]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="/funoon_fiesta//src/assets/js/smoothScrolling.js"></script>
   </body>
 </html>
