Add google search console tag

--- a/funoon_fiesta/index.html
+++ b/funoon_fiesta/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Funooon Fiesta is the platform for students to showcse their talents. The art form of islamic culture is presented to society through Funoon Fiesta." />
 
   <!-- Meta keywords for better SEO -->
-  <meta name="keywords" content="Funoon Fiesta, Jamia art fest results, jamia nooriyya arabiyya, Funoon Fiesta results, Jami'a Nooriyya, Funoon Fiesta 2024-2025, Funoon Fiesta results 2024-2025" />
+  <meta name="keywords" content="Funoon Fiesta,Funoon fiesta, Jamia art fest results, jamia nooriyya arabiyya, Funoon Fiesta results, Jami'a Nooriyya, Funoon Fiesta 2024-2025, Funoon Fiesta results 2024-2025" />
 
   <!-- Open Graph meta tags for better sharing -->
   <meta property="og:title" content="Funoon Fiesta - Art Fest Result Management" />
