add app downloading option with PWA

--- a/funoon_fiesta/index.html
+++ b/funoon_fiesta/index.html
@@ -21,6 +21,14 @@
   <meta property="og:image" content="https://funoonfiesta.vercel.app/favicon.ico" />
   <meta property="og:url" content="https://funoonfiesta.vercel.app/" />
 
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Funoon Fiesta">
+  <meta name="apple-mobile-web-app-title" content="Funoon Fiesta">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="msapplication-starturl" content="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <!-- Favicon for the website -->
   <link rel="icon" type="image/x-icon" href="https://funoonfiesta.vercel.app/favicon.ico">
   
