--- a/funoon_fiesta/index.html
+++ b/funoon_fiesta/index.html
@@ -10,40 +10,58 @@
   <title>Funoon Fiesta - Art Fest Result Management</title>
 
   <!-- Meta description for better SEO -->
-  <meta name="description" content="Funooon Fiesta is the platform for students to showcse their talents. The art form of islamic culture is presented to society through Funoon Fiesta." />
+  <meta name="description" content="Funoon Fiesta is the platform for students to showcase their talents. The art form of islamic culture is presented to society through Funoon Fiesta." />
 
   <!-- Meta keywords for better SEO -->
-  <meta name="keywords" content="Funoon Fiesta,Funoon fiesta, Jamia art fest results, jamia nooriyya arabiyya, Funoon Fiesta results, Jami'a Nooriyya, Funoon Fiesta 2024-2025, Funoon Fiesta results 2024-2025" />
+  <meta name="keywords" content="Funoon Fiesta, Funoon fiesta, Jamia art fest results, jamia nooriyya arabiyya, Funoon Fiesta results, Jami'a Nooriyya, Funoon Fiesta 2024-2025, Funoon Fiesta results 2024-2025" />
 
   <!-- Open Graph meta tags for better sharing -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Funoon Fiesta" />
   <meta property="og:title" content="Funoon Fiesta - Art Fest Result Management" />
   <meta property="og:description" content="Check your Funoon Fiesta art fest results and updates on your favorite programs. A platform for students and alumni." />
-  <meta property="og:image" content="https://funoonfiesta.vercel.app/favicon.ico" />
+  <meta property="og:image" content="https://funoonfiesta.vercel.app/festlogo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/png" />
   <meta property="og:url" content="https://funoonfiesta.vercel.app/" />
 
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Funoon Fiesta">
-  <meta name="apple-mobile-web-app-title" content="Funoon Fiesta">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="msapplication-starturl" content="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Funoon Fiesta - Art Fest Result Management" />
+  <meta name="twitter:description" content="Check your Funoon Fiesta art fest results and updates on your favorite programs." />
+  <meta name="twitter:image" content="https://funoonfiesta.vercel.app/festlogo.png" />
+  <meta name="twitter:domain" content="funoonfiesta.vercel.app" />
 
-  <!-- Favicon for the website -->
-  <link rel="icon" type="image/x-icon" href="https://funoonfiesta.vercel.app/favicon.ico">
-  
-  <!-- Apple touch icon for iOS devices -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <!-- PWA meta tags -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="application-name" content="Funoon Fiesta" />
+  <meta name="apple-mobile-web-app-title" content="Funoon Fiesta" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="theme-color" content="#f5f0ec" />
+  <meta name="msapplication-TileColor" content="#f5f0ec" />
+  <meta name="msapplication-starturl" content="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <!-- Link to a manifest file (useful for PWA support) -->
-  <link rel="manifest" href="/site.webmanifest">
+  <!-- Favicon and icon links -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
 
+  <!-- Web manifest -->
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <!-- External Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
 
-  <!-- Robots meta tag to help search engines index the page -->
-  <meta name="robots" content="index, follow">
-
+  <!-- Robots meta tag -->
+  <meta name="robots" content="index, follow" />
 </head>
 
 <body class="bg-[#f5f0ec]">
